Cambio de favicon

--- a/r3.html
+++ b/r3.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solicitud R3</title>
+  <link rel="icon" href="./img/favicon-32x32.png" type="image/png"/>
   <link rel="stylesheet" href="./css/r3-styles.css">
 </head>
 
