--- a/r4.html
+++ b/r4.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solicitud R4</title>
+  <link rel="icon" href="./img/favicon-32x32.png" type="image/png" />
   <link rel="stylesheet" href="./css/r4-styles.css">
 </head>
 
 <body>
   <section class="container">
     <div id="tabla">
-      
+
     </div>
   </section>
 
