--- a/r2.html
+++ b/r2.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solicitud R2</title>
+
+  <link rel="icon" href="./img/favicon-32x32.png" type="image/png" />
   <link rel="stylesheet" href="./css/r2-styles.css">
 </head>
 
